# aidb

./: .gitignore  AGENTS.md  Cargo.toml  README.md  agent.md  goal.md  requirements.md
.autocoder/: config.yaml
.autocoder/tasks/closed/done/: task_00003.yaml  task_00005.yaml  task_00006.yaml  task_00013.yaml  task_00016.yaml  task_00017.yaml  task_00019.yaml  task_00023.yaml  task_00024.yaml  task_00025.yaml  task_00026.yaml  task_00027.yaml  task_00029.yaml  task_00031.yaml  task_00032.yaml  task_00033.yaml  task_00034.yaml  task_00035.yaml  task_00036.yaml  task_00037.yaml  task_00038.yaml  task_00039.yaml  task_00040.yaml  task_00041.yaml  task_00043.yaml  task_00044.yaml  task_00045.yaml  task_00046.yaml  task_00047.yaml  task_00048.yaml  task_00049.yaml  task_00050.yaml  task_00051.yaml  task_00052.yaml  task_00053.yaml  task_00054.yaml  task_00055.yaml  task_00056.yaml  task_00057.yaml  task_00058.yaml  (+40 more)
.autocoder/tasks/open/backlog/: task_00012.yaml  task_00014.yaml  task_00015.yaml  task_00018.yaml  task_00020.yaml  task_00021.yaml  task_00022.yaml  task_00028.yaml  task_00030.yaml  task_00042.yaml  task_00053.yaml  task_00097.yaml  task_00098.yaml  (+36 more)
cli/: Cargo.toml
cli/src/: main.rs
engine/: Cargo.toml  README.md
engine/src/: catalog.rs  lib.rs  record.rs  slt.rs
engine/src/sql/: executor.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs  planner.rs  predicate.rs  validator.rs
engine/tests/: sqllogictest_harness.rs
server/: Cargo.toml
server/src/: main.rs
tests/sqllogictest/: UPSTREAM.txt
tests/sqllogictest/test/: aidb_smoke.test
(+8 files in other folders)
