[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine" }
hyper = { version = "0.14", default-features = false, features = ["http1", "server", "tcp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
